--- a/GarphIt.web/Pages/File.razor
+++ b/GarphIt.web/Pages/File.razor
@@ -1,26 +1,23 @@
 ﻿@inherits FileBase
 
-<nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <div class="d-flex">
-        <div class="dropdown px-1">
-            <button class="btn shadow-none NavNone dropdown-toggle oi oi-share-boxed" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Export As
-            </button>
-            <div class="dropdown-menu" aria-labelledby="saveas">
-                <a class="dropdown-item" @onclick="() => SaveSVGFile(true)">screen view SVG</a>
-                <a class="dropdown-item" @onclick="() => SaveSVGFile(false)">full view SVG</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" @onclick="SaveGraphItFile">Graph File</a>
-            </div>
-        </div>
-        <div class="px-1">
-            <button class="btn NavNone shadow-none oi oi-envelope-open" @onclick="(() => OpenPreference = true)">Open</button>
-        </div>
-        <div class="px-1">
-            <button class="btn NavNone shadow-none oi oi-reload" @onclick="(() => NewGraphCheck = true)">New</button>
-        </div>
+
+<li class="dropdown px-1">
+    <button class="btn shadow-none NavNone dropdown-toggle oi oi-share-boxed" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Export As
+    </button>
+    <div class="dropdown-menu" aria-labelledby="saveas">
+        <a class="dropdown-item" @onclick="() => SaveSVGFile(true)">screen view SVG</a>
+        <a class="dropdown-item" @onclick="() => SaveSVGFile(false)">full view SVG</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" @onclick="SaveGraphItFile">Graph File</a>
     </div>
-</nav>
+</li>
+<li class="px-1">
+    <button class="btn NavNone shadow-none oi oi-envelope-open" @onclick="(() => OpenPreference = true)">Open</button>
+</li>
+<li class="px-1">
+    <button class="btn NavNone shadow-none oi oi-reload" @onclick="(() => NewGraphCheck = true)">New</button>
+</li>
 @if (ErrorOpening)
 {
     <SfDialog Width="300px" IsModal="true">
