--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -16,32 +16,29 @@ else
 {
     EdgeCss = "NavNone";
 }
-<nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <div class="d-inline-flex">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label class="btn @NodeCss shadow-none" @onclick="UpdateInsertNode">
-                <input type="checkbox" autocomplete="off"> @("Node")
-            </label>
-            <label class="btn @EdgeCss shadow-none" @onclick="UpdateInsertEdge">
-                <input type="checkbox" autocomplete="off"> @("Edge")
-            </label>
-        </div>
+<li class="btn-group btn-group-toggle" data-toggle="buttons">
+    <label class="btn @NodeCss shadow-none" @onclick="UpdateInsertNode">
+        <input type="checkbox" autocomplete="off"> @("Node")
+    </label>
+    <label class="btn @EdgeCss shadow-none" @onclick="UpdateInsertEdge">
+        <input type="checkbox" autocomplete="off"> @("Edge")
+    </label>
+</li>
 
-        <div class="dropdown px-1">
-            <button class="btn shadow-none NavNone dropdown-toggle" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Common Graphs
-            </button>
-            <div class="dropdown-menu" aria-labelledby="saveas">
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Cyclic)">Single Cyclic</a>
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Tree)">Tree (straight line)</a>
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Complete)">Clique</a>
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Star)">Star</a>
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.RBipartite)">Regular Bipartite</a>
-                <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.CBipartite)">Complete Bipartite</a>
-            </div>
-        </div>
+<li class="dropdown px-1">
+    <button class="btn shadow-none NavNone dropdown-toggle" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Common Graphs
+    </button>
+    <div class="dropdown-menu" aria-labelledby="saveas">
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Cyclic)">Single Cyclic</a>
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Tree)">Tree (straight line)</a>
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Complete)">Clique</a>
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.Star)">Star</a>
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.RBipartite)">Regular Bipartite</a>
+        <a class="dropdown-item" @onclick="(() => WantedGraph = CommonGraph.CBipartite)">Complete Bipartite</a>
     </div>
-</nav>
+</li>
+
 @if (WantedGraph != null && !Loading)
 {
     string Klabel = "Nodes: ";
@@ -69,12 +66,6 @@ else
             </Content>
         </DialogTemplates>
     </SfDialog>
-}
-@if (Loading)
-{
-    <div class="spinner-border" role="status">
-        <span class="sr-only">Graph In Making...</span>
-    </div>
 }
 @if (ErrorCreatingGraph != "")
 {
