--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -1,36 +1,33 @@
 ﻿@inherits NavBarBase
 
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <span class="navbar-brand logo-custom pl-2 pr-3 mx-0">GarphIt</span>
+    <span class="navbar-brand logo-custom pl-2 pr-3 mx-0">GraphIt</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse mx-0" id="navbarNav">
-        <ul class="navbar-nav mx-0">
-            <li class="nav-item @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
-                <button type="button" class="btn shadow-none oi oi-file">File</button>
+        <ul class="navbar-nav mr-auto mx-0">
+            <li class="navbar-text @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
+                <button class="btn shadow-none oi oi-file">File</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
-                <button type="button" class="btn shadow-none oi oi-home">Home</button>
+            <li class="navbar-text @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
+                <button class="btn shadow-none oi oi-home">Home</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
-                <button type="button" class="btn shadow-none oi oi-plus">Insert</button>
+            <li class="navbar-text @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
+                <button class="btn shadow-none oi oi-plus">Insert</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.View]" @onclick="(() => Click(NavChoice.View))">
-                <button type="button" class="btn shadow-none oi oi-magnifying-glass">View</button>
+            <li class="navbar-text @NavElements[(int)NavChoice.View]" @onclick="(() => Click(NavChoice.View))">
+                <button class="btn shadow-none oi oi-magnifying-glass">View</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Node]" @onclick="(() => Click(NavChoice.Node))">
-                <button type="button" class="btn shadow-none oi oi-media-record">Node</button>
+            <li class="navbar-text @NavElements[(int)NavChoice.Node]" @onclick="(() => Click(NavChoice.Node))">
+                <button class="btn shadow-none oi oi-media-record">Node</button>
             </li>
-            <li class="nav-item @NavElements[(int)NavChoice.Edge]" @onclick="(() => Click(NavChoice.Edge))">
-                <button type="button" class="btn shadow-none oi oi-transfer">Edge</button>
-            </li>
-            <li class="nav-item @NavElements[(int)NavChoice.About]" @onclick="(() => Click(NavChoice.About))">
-                <button type="button" class="btn shadow-none oi oi-info"></button>
+            <li class="navbar-text @NavElements[(int)NavChoice.Edge]" @onclick="(() => Click(NavChoice.Edge))">
+                <button class="btn shadow-none oi oi-transfer">Edge</button>
             </li>
         </ul>
-    </div>
-    <div style="width: 100%" @onclick=Reset>
-        &nbsp
+        <span class="navbar-text @NavElements[(int)NavChoice.About]" @onclick="(() => Click(NavChoice.About))">
+            <button class="btn shadow-none oi oi-info"></button>
+        </span>
     </div>
 </nav>
