--- a/GarphIt.web/Pages/View.razor
+++ b/GarphIt.web/Pages/View.razor
@@ -1,34 +1,31 @@
 ﻿@inherits ViewBase
 
-<nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <div class="d-flex">
-        <span class="px-1 btn-group" role="group">
-            <button class="btn NavNone shadow-none p-0 oi oi-zoom-out" @onclick="@(() => OnScaleClick(0.1))"></button>
-            <select class="form-control shadow-none scrollable-menu p-0" @onchange="SelectionZoom">
-                <option value="fit" hidden>@(Math.Round(SVGControl.Scale,1))</option>
-                @for (double i = 0.1; i < 2.0; i += 0.1)
-                {
-                    if (Math.Round(i, 1) == Math.Round(SVGControl.Scale, 1))
-                    {
-                        <option value="@(i)" selected>@(Math.Round(i,1))</option>
-                    }
-                    else
-                    {
-                        <option value="@(i)">@(Math.Round(i,1))</option>
-                    }
-                }
-            </select>
-            @if (StopZoomIn)
+
+<li class="btn-group" role="group">
+    <button class="btn NavNone shadow-none p-0 oi oi-zoom-out" @onclick="@(() => OnScaleClick(0.1))"></button>
+    <select class="form-control shadow-none scrollable-menu p-0" @onchange="SelectionZoom">
+        <option value="fit" hidden>@(Math.Round(SVGControl.Scale,1))</option>
+        @for (double i = 0.1; i < 2.0; i += 0.1)
+        {
+            if (Math.Round(i, 1) == Math.Round(SVGControl.Scale, 1))
             {
-                <button class="btn btn-secondary p-0 oi oi-zoom-in" disabled></button>
+                <option value="@(i)" selected>@(Math.Round(i,1))</option>
             }
             else
             {
-                <button class="btn NavNone shadow-none p-0 oi oi-zoom-in" @onclick="@(() => OnScaleClick(-0.1))"></button>
+                <option value="@(i)">@(Math.Round(i,1))</option>
             }
-        </span>
-        <div class="px-1">
-            <button class="btn NavNone shadow-none" @onclick="Fit">Graph Fit</button>
-        </div>
-    </div>
-</nav>
+        }
+    </select>
+    @if (StopZoomIn)
+    {
+        <button class="btn p-0 oi oi-zoom-in" disabled></button>
+    }
+    else
+    {
+        <button class="btn NavNone shadow-none p-0 oi oi-zoom-in" @onclick="@(() => OnScaleClick(-0.1))"></button>
+    }
+</li>
+<li class="NavNone">
+    <button class="btn shadow-none" @onclick="Fit">Graph Fit</button>
+</li>
